k8s/testing/key-vault-testing.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dependent-envars-demo
  namespace: ecommerce
spec:
  containers:
    - name: dependent-envars-demo
      image: busybox:1.28
      command:
        - sh
        - -c
        - |
          while true; do 
            echo -en '\n'; 
            printf "UNCHANGED_REFERENCE=$(cat /mnt/secrets-store/NEXT-PUBLIC-CLERK-PUBLISHABLE-KEY)\n"; 
            sleep 30; 
          done;
      env: []
      volumeMounts:
      - name: secrets-store-inline
        mountPath: /mnt/secrets-store
        readOnly: true
  volumes:
    - name: secrets-store-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "azure-kvname-user-msi"
